--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -1,6 +1,16 @@
+!border_color = #cccccc
+
 body
   :margin 0
   :padding 0
+  *
+    :font-size 12px
+
+.tip
+  :color = !border_color 
+
+.center_text
+  :text-align center
 
 #toolbar
   :height 35px
@@ -16,3 +26,6 @@ body
     
     &:hover
       :background-position left bottom
+
+#title
+  :font-size 36px
