--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,16 +4,17 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %title=@title
-    =stylesheet_link_tag "blueprint/screen"
-    / [if lt IE 8]
-      =stylesheet_link_tag "blueprint/ie"
-    =stylesheet_link_tag "default" 
-    =javascript_include_tag "jquery", "jrails", "swfobject", "application" 
+    -bundle do
+      =stylesheet_link_tag "blueprintcss/screen"
+      / [if lt IE 8]
+        =stylesheet_link_tag "blueprintcss/ie"
+      =stylesheet_link_tag "wikistyle", "default" 
+      =javascript_include_tag "jquery", "jrails", "swfobject", "application" 
 
   %body
     #toolbar
       =link_to_function '', 'Game.next()', :class => 'next'
     .container
-      #content.span-19
+      #content.span-24
         =yield
-      #footer.span-19
+      #footer.span-24
