开发History rake js:shell报错，换最新的

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,7 +9,7 @@
       / [if lt IE 8]
         =stylesheet_link_tag "blueprintcss/ie"
       =stylesheet_link_tag "wikistyle", "default" 
-      =javascript_include_tag "jquery", "jrails", "swfobject", "application" 
+      =javascript_include_tag "jquery", "jrails", "jquery.cookies", "swfobject", "application" 
 
   %body
     #toolbar
