--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -4,6 +4,20 @@ body {
   body * {
     font-size: 12px; }
 
+a {
+  text-decoration: none; }
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  float: left; }
+  ul li {
+    float: left;
+    padding: 2px 10px; }
+    ul li a {
+      color: #cccccc; }
+
 .tip {
   color: #cccccc; }
 
@@ -22,6 +36,10 @@ body {
     background: url(/images/next.png) repeat-x; }
     #toolbar .next:hover {
       background-position: left bottom; }
+  #toolbar span {
+    float: left;
+    margin: 2px 2px 2px 30px;
+    color: #cccccc; }
 
 #title {
   font-size: 36px; }
