--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -1,3 +1,4 @@
+!front_color_light = #ffffff
 !border_color = #cccccc
 
 body
@@ -5,6 +6,21 @@ body
   :padding 0
   *
     :font-size 12px
+
+a
+  :text-decoration none
+
+ul
+  :margin 0px 
+  :padding 0px 
+  :list-style none
+  :float left
+
+  li
+    :float left
+    :padding 2px 10px
+    a
+      :color = !border_color
 
 .tip
   :color = !border_color 
@@ -26,6 +42,12 @@ body
     
     &:hover
       :background-position left bottom
+  
+  span
+    :float left
+    :margin 2px 2px 2px 30px
+    :color = !border_color
+
 
 #title
   :font-size 36px
