开发首页 加入首页logo及说明

--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -11,4 +11,6 @@
 .span-6.last
   .wikistyle
     %h3 游戏说明
-    .description=RedCloth.new(@game.description).to_html
+    .description
+      :textile
+        #{@game.description}
