--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -28,25 +28,28 @@ ul
 .center_text
   :text-align center
 
+//下一个按钮
+.next
+  :float left
+  :height 23px
+  :width 68px
+  :background url(/images/next.png) repeat-x
+
 #toolbar
   :height 35px
   :background url(/images/toolbar-bg.png) repeat-x
   :padding 6px 8px
-
-  .next
-    :float left
-    :height 23px
-    :width 68px
-    :background-position left top
-    :background url(/images/next.png) repeat-x
-    
-    &:hover
-      :background-position left bottom
   
-  span
+  .history_label
     :float left
     :margin 2px 2px 2px 30px
     :color = !border_color
+
+  .logo
+    :float right
+    :height 23px
+    :width 150px
+    :background url(/images/logo.png) no-repeat
 
 
 #title
