--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,4 +19,24 @@
     .container
       #content.span-24
         =yield
-      #footer.span-24
+      #footer.span-18
+        .links
+          友情链接:
+          =link_to "真心话网", "http://www.55true.com", :target=>"_blank"
+          =link_to "滋味网", "http://www.ziwee.cn", :target=>"_blank"
+          =link_to "4399", "http://www.4399.net", :target=>"_blank"
+          =link_to "7k7k小游戏", "http://www.7k7k.com", :target=>"_blank"
+          =link_to "小游戏007", "http://www.yx007.com", :target=>"_blank"
+          =link_to "萱萱休闲吧", "http://www.xuanxuan.com", :target=>"_blank"
+          =link_to "在线小游戏", "http://www.xiaoyouxi.com", :target=>"_blank"
+        .copyright 
+          copyright © 2009 
+          %span><=link_to "小游网", "http://www.55xiaoyou.com", :target=>"_blank"
+          \. All Rights Reserved.
+      #footer_side.span-6.last
+        .tip
+          想玩下一个游戏了?请点击左上角的按钮!
+        .feedback
+          小游群:85215073
+          =link_to "意见反馈", "http://qun.qq.com", :target=>"_blank"
+          =link_to "游戏推荐", "http://qun.qq.com", :target=>"_blank"
