--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -9,6 +9,7 @@
   =swf_tag @game.url, :id => 'game_bg', :width => 720, :height => 540
 
 .span-6.last
+  .shareit.float_right= render :partial => 'home/shareit', :locals => { :path => game_url(@game), :title => "#{@game.name} 小游网", :show => "收藏分享#{@game.name}"}
   .wikistyle
     %h3 游戏说明
     .description
