--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,7 +8,7 @@
     / [if lt IE 8]
       =stylesheet_link_tag "blueprintcss/ie"
     =stylesheet_link_tag "wikistyle", "default" 
-    =javascript_include_tag "jquery", "jrails", "jquery.cookies", "swfobject", "histories", "games", "application" 
+    =javascript_include_tag "jquery", "jrails", "jquery.cookies", "swfobject", "histories", "games", "share", "application" 
 
   %body
     #toolbar
