--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -17,10 +17,10 @@ ul
   :padding 0px 
   :list-style none
   :float left
-
   li
     :float left
     :padding 2px 10px
+    //指定toolbar history
     a
       :color = !border_color
 
@@ -29,6 +29,12 @@ ul
 
 .center_text
   :text-align center
+
+.float_right
+  :float right
+
+.float_left
+  :float left
 
 //下一个按钮
 .next
