--- a/public/stylesheets/sass/wikistyle.sass
+++ b/public/stylesheets/sass/wikistyle.sass
@@ -20,7 +20,8 @@
     :padding-top .5em!important
 
   h3
-    :margin-top 1.5em!important
+    :margin-top 0.8em!important
+    :margin-bottom 0.5em!important
 
   p
     :margin 1em 0!important
@@ -34,11 +35,11 @@
   ol
     :margin 1em 0 1em 1.5em!important
 
-    ol
+    li
       :margin-top 0!important
       :margin-bottom 0!important
   div
-    :margin 1em 0!important
+    :margin 0.1em 0!important
     :background-color #f8f8ff!important
     :border 1px solid #dedede!important
     :padding .5em!important
