--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,10 +1,9 @@
-.nav=link_to '新增游戏', new_game_path
 %table
   %thead
     %tr
       %th=t('activerecord.attributes.game.name')
       %th=t('activerecord.attributes.game.description')
-      %th{:colpan=>2} &nbsp;
+      %th{:colpan=>2}=link_to '新增游戏', new_game_path
 
   %tbody
     -@page.each do |game|
