调整测试用例

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -35,7 +35,7 @@
           =link_to "在线小游戏", "http://www.xiaoyouxi.com", :target=>"_blank"
         .copyright 
           copyright © 2009 
-          %span><=link_to "小游网", "http://www.55xiaoyou.com", :target=>"_blank"
+          %span><=link_to "小游网", home_path, :target=>"_blank"
           \. All Rights Reserved.
       #footer_side.span-6.last
         .tip
