反馈链接不应隐藏

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -64,7 +64,7 @@ ul {
   margin-top: 20px; }
   #footer_side div {
     margin: 2px; }
-  #footer_side a {
+  #footer_side img {
     display: none; }
 
 .nav {
