修正收藏地址包含admin的问题

--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -10,7 +10,7 @@
   .tip 游戏文件较大，请等候
 
 .span-6.last
-  .shareit.float_right= render :partial => 'home/shareit', :locals => { :path => game_url(@game), :title => "好玩的在线小游戏:#{@game.name} 小游网", :show => "收藏分享#{@game.name}"}
+  .shareit.float_right= render :partial => 'home/shareit', :locals => { :path => show_game_url(@game), :title => "好玩的在线小游戏:#{@game.name} 小游网", :show => "收藏分享#{@game.name}"}
   .wikistyle
     %h3 游戏说明
     .description
