--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -14,6 +14,7 @@
     想玩下一个游戏了? 
     点击左上角的按钮!
   =link_to '', home_path, :class => :next
+  =link_to '查看所有', sitemap_path, :class => :view_all_btn
 
 :javascript
   window.setTimeout(function(){
