--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,7 +6,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #000000; }
+  color: black; }
 
 ul {
   margin: 0px;
@@ -53,6 +53,8 @@ ul {
 
 #content #title {
   font-size: 36px; }
+#content .view_all_btn {
+  display: hide; }
 
 #footer {
   text-align: center;
