--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,7 @@
       / [if lt IE 8]
         =stylesheet_link_tag "blueprintcss/ie"
       =stylesheet_link_tag "wikistyle", "default" 
-      =javascript_include_tag "jquery", "jrails", "jquery.cookies", "swfobject", "histories", "games", "share", "application" 
+      =javascript_include_tag "jquery", "jrails", "jquery.cookies", "swfobject", "histories", "games", "share", "ZeroClipboard", "application" 
 
   %body
     #toolbar
