--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -81,6 +81,27 @@ ul
   img
     :display none
 
+//game thumbs
+#popular_list
+  li
+    :width 150px
+
+.thumbs
+  :width 120px
+  dt img
+    :display block
+    :margin 3px
+    :padding 5px
+    :border 1px #cccccc solid
+    :width 120px
+    :height 90px
+  dd
+    :margin 0
+    :text-align center
+    :font-weight bold
+    a
+      :color = !blue_color
+
 //clipboard
 .copy_this_tip
   :color red
