--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,10 +1,15 @@
 .span-18
-  %h2 最多人玩
-  %ul#popular_list
+  .bar 最多人玩
+  %ul.thumbs_list
     -@popular_list.each do |game|
-      %li=render :partial => '/games/thumbs', :locals => { :game => game }
+      %li=render :partial => '/games/thumbs', :locals => { :game => game , :style => :normal, :show_views => true}
 .span-6.last
-  %h2 其他人正玩
-  %ul#now_list
+  .shareit=render :partial => 'home/shareit', :locals => { :path => home_url, :title => @title, :show => "收藏分享小游网"}
+  .copy_this_tip 点击复制以下内容，发送给QQ/MSN好友
+  .copy_this
+    .pop==发现一个很多精选小游戏的地方
+    .url=home_url
+  .bar.vertical 其他人正玩
+  %ul.now_list
     -@now_list.each do |game|
-      %li=render :partial => '/games/thumbs', :locals => { :game => game }
+      %li=render :partial => '/games/thumbs', :locals => { :game => game, :style => :mini, :show_views => false }
