--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -41,7 +41,7 @@ ul
 .float_left
   :float left
 
-//游戏展示页面[其他人正玩]
+//游戏展示页面[其他人在玩]
 .bar
   :background-color = !blue_color
   :color = !white_color
