--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -21,7 +21,7 @@
     .description
       :textile
         #{@game.description}
-  .bar.vertical 其他人正玩
+  .bar.vertical 其他人在玩
   %ul.now_list.float_right
     -@now_list.each do |game|
       %li=render :partial => '/games/thumbs', :locals => { :game => game, :style => :mini, :show_views => false }
