--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -24,4 +24,5 @@
   .bar.vertical 其他人在玩
   %ul.now_list.float_right
     -@now_list.each do |game|
-      %li=render :partial => '/games/thumbs', :locals => { :game => game, :style => :mini, :show_views => false }
+      - if game != @game
+        %li=render :partial => '/games/thumbs', :locals => { :game => game, :style => :mini, :show_views => false }
