--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -22,7 +22,7 @@
       :textile
         #{@game.description}
   .bar.vertical 其他人在玩
-  %ul.now_list.float_right
+  %ul.now_list
     -@now_list.each do |game|
       - if game != @game
         %li=render :partial => '/games/thumbs', :locals => { :game => game, :style => :mini, :show_views => false }
