--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -12,8 +12,7 @@ a {
 ul {
   margin: 0px;
   padding: 0px;
-  list-style: none;
-  float: left; }
+  list-style: none; }
   ul li {
     float: left;
     padding: 2px 10px; }
