--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -28,6 +28,8 @@
           友情链接:
           =render :partial => '/site/links'
         .site
+          =link_to "首页", home_path
+          |
           =link_to "关于本站", aboutus_path
           |
           =link_to "联系我们", contactus_path
