--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -4,7 +4,7 @@
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %title=@title
-    %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/images/favicon.ico"}
+    %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/favicon.ico"}
     =javascript_include_tag "/games/max.js"
     -bundle do
       =stylesheet_link_tag "blueprintcss/screen"
