support new html game

--- a/app/views/games/new.haml
+++ b/app/views/games/new.haml
@@ -6,7 +6,7 @@
     .input=f.text_field :name
     .label=f.label_require :url
     .input=f.text_field :url
-    .label 地址以#remote结尾的,不会被下载至服务器本地
+    .label 地址以.html或#remote结尾的,不会被下载至服务器本地
     .label=f.label :photo
     .input=f.file_field :photo
     .label=f.label_require :description
