--- a/app/views/site/_links.haml
+++ b/app/views/site/_links.haml
@@ -1,8 +1,25 @@
-=link_to "真心话网", "http://www.55true.com", :target=>"_blank"
-=link_to "520网址之家", "http://abc.520.com", :target=>"_blank"
-=link_to "滋味网", "http://www.ziwee.cn", :target=>"_blank"
-=link_to "4399", "http://www.4399.net", :target=>"_blank"
-=link_to "7k7k小游戏", "http://www.7k7k.com", :target=>"_blank"
-=link_to "小游戏007", "http://www.yx007.com", :target=>"_blank"
-=link_to "萱萱休闲吧", "http://www.xuanxuan.com", :target=>"_blank"
-=link_to "在线小游戏", "http://www.xiaoyouxi.com", :target=>"_blank"
+%ul
+  %li=link_to "友情链接:", home_path
+  %li=link_to "真心话网", "http://www.55true.com", :target=>"_blank"
+  %li=link_to "520网址之家", "http://abc.520.com", :target=>"_blank"
+  %li=link_to "茶饭后", "http://chafanhou.com", :target=>"_blank"
+  %li=link_to "安安逸逸", "http://www.anan11.com/", :target=>"_blank"
+  %li=link_to "拼命玩三郎", "http://my.dongua.com/flashgame/", :target=>"_blank"
+  %li=link_to "滋味网", "http://www.ziwee.cn", :target=>"_blank"
+  %li=link_to "9166网址导航", "http://www.9166.net/", :target=>"_blank"
+  %li=link_to "1181自助链", "http://link.1181.com/go.asp?id=7528", :target=>"_blank"
+  %li=link_to "7k7k小游戏", "http://www.7k7k.com", :target=>"_blank"
+  %li=link_to "3322网址之家", "http://www.3322.com", :target=>"_blank"
+  %li=link_to "4399", "http://www.4399.net", :target=>"_blank"
+  %li=link_to "7999网址大全", "http://7999.com/", :target=>"_blank"
+  %li=link_to "小游戏007", "http://www.yx007.com", :target=>"_blank"
+  %li=link_to "网址之家", "http://www.1166.com/index.html", :target=>"_blank"
+  %li=link_to "萱萱休闲吧", "http://www.xuanxuan.com", :target=>"_blank"
+  %li=link_to "8009网址导航", "http://www.8009.net", :target=>"_blank"
+  %li=link_to "在线小游戏", "http://www.xiaoyouxi.com", :target=>"_blank"
+  %li=link_to "歪歪上网导航", "http://www.yy345.com/", :target=>"_blank"
+  %li=link_to "小游网", home_path, :target=>"_blank"
+  %li=link_to "7345网址导航", "http://www.7345.com/", :target=>"_blank"
+  %li=link_to "9123网址大全", "http://www.9123.com/", :target=>"_blank"
+  %li=link_to "zhaodao123", "http://www.zhaodao123.com/", :target=>"_blank"
+  %li=link_to "8766网址之家", "http://www.8766.cn", :target=>"_blank"
