--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -135,6 +135,14 @@ ul
 .hover
   :background-color = !border_color
 
+//links
+.links
+  ul
+    :margin 0 35px
+    li
+      :width 90px
+      :text-align left
+
 //site
 #site
   h1
