--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -120,6 +120,12 @@ ul {
 .hover {
   background-color: #cccccc; }
 
+.links ul {
+  margin: 0 35px; }
+  .links ul li {
+    width: 90px;
+    text-align: left; }
+
 #site h1 {
   margin: 15px;
   font-size: 24px; }
